--- a/index.html
+++ b/index.html
@@ -23,33 +23,159 @@
     img {
       width: 100%;
     }
+    .ko {
+      background: red;
+    }
+    .ko img {
+      opacity: 0.5;
+    }
   </style>
 </head>
 <body>
   <table>
+    <tr class="l13">
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c8"><img src="img/0empty.jpg"></td>
+      <td class="c9"><img src="img/0empty.jpg"></td>
+      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c13"><img src="img/0empty.jpg"></td>
+    </tr>
+    <tr class="l12">
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c8"><img src="img/0empty.jpg"></td>
+      <td class="c9"><img src="img/0empty.jpg"></td>
+      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c13"><img src="img/0empty.jpg"></td>
+    </tr>
+    <tr class="l11">
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c8"><img src="img/0empty.jpg"></td>
+      <td class="c9"><img src="img/0empty.jpg"></td>
+      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c13"><img src="img/0empty.jpg"></td>
+    </tr>
+    <tr class="l10">
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c8"><img src="img/0empty.jpg"></td>
+      <td class="c9"><img src="img/0empty.jpg"></td>
+      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c13"><img src="img/0empty.jpg"></td>
+    </tr>
+    <tr class="l9">
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c8"><img src="img/0empty.jpg"></td>
+      <td class="c9"><img src="img/0empty.jpg"></td>
+      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c13"><img src="img/0empty.jpg"></td>
+    </tr>
+    <tr class="l8">
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c8"><img src="img/0empty.jpg"></td>
+      <td class="c9"><img src="img/0empty.jpg"></td>
+      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c13"><img src="img/0empty.jpg"></td>
+    </tr>
+    <tr class="l7">
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c8"><img src="img/0empty.jpg"></td>
+      <td class="c9"><img src="img/0empty.jpg"></td>
+      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c13"><img src="img/0empty.jpg"></td>
+    </tr>
+    <tr class="l6">
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c8"><img src="img/0empty.jpg"></td>
+      <td class="c9"><img src="img/0empty.jpg"></td>
+      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c13"><img src="img/0empty.jpg"></td>
+    </tr>
     <tr class="l5">
-      <td class="c1"><img src="img/.jpg"></td>
-      <td class="c2"><img src="img/.jpg"></td>
-      <td class="c3"><img src="img/.jpg"></td>
-      <td class="c4"><img src="img/.jpg"></td>
-      <td class="c5"><img src="img/.jpg"></td>
-      <td class="c6"><img src="img/.jpg"></td>
-      <td class="c7"><img src="img/.jpg"></td>
-      <td class="c8"><img src="img/.jpg"></td>
-      <td class="c9"><img src="img/.jpg"></td>
-      <td class="c10"><img src="img/.jpg"></td>
-      <td class="c11"><img src="img/.jpg"></td>
-      <td class="c12"><img src="img/.jpg"></td>
-      <td class="c13"><img src="img/.jpg"></td>
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c8"><img src="img/0empty.jpg"></td>
+      <td class="c9"><img src="img/0empty.jpg"></td>
+      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c13"><img src="img/0empty.jpg"></td>
     </tr>
     <tr class="l4">
-      <td class="c1"><img src="img/.jpg"></td>
-      <td class="c2"><img src="img/.jpg"></td>
-      <td class="c3"><img src="img/.jpg"></td>
-      <td class="c4"><img src="img/.jpg"></td>
-      <td class="c5"><img src="img/.jpg"></td>
-      <td class="c6"><img src="img/.jpg"></td>
-      <td class="c7"><img src="img/.jpg"></td>
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
       <td class="c8"><img src="img/lindsey stirling.jpg"></td>
       <td class="c9"><img src="img/bjork-homogenic.jpg"></td>
       <td class="c10"><img src="img/bongo botrako-todos los dias sale el sol.jpg"></td>
@@ -58,13 +184,13 @@
       <td class="c13"><img src="img/orbital-orbital 2.jpg"></td>
     </tr>
     <tr class="l3">
-      <td class="c1"><img src="img/.jpg"></td>
-      <td class="c2"><img src="img/.jpg"></td>
-      <td class="c3"><img src="img/.jpg"></td>
-      <td class="c4"><img src="img/.jpg"></td>
-      <td class="c5"><img src="img/.jpg"></td>
-      <td class="c6"><img src="img/.jpg"></td>
-      <td class="c7"><img src="img/.jpg"></td>
+      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c4"><img src="img/0empty.jpg"></td>
+      <td class="c5"><img src="img/0empty.jpg"></td>
+      <td class="c6"><img src="img/0empty.jpg"></td>
+      <td class="c7"><img src="img/0empty.jpg"></td>
       <td class="c8"><img src="img/lady gaga-the fame monster.jpg"></td>
       <td class="c9"><img src="img/madeon-adventure.jpg"></td>
       <td class="c10"><img src="img/ludovico einaudi-islands.jpg"></td>
@@ -73,12 +199,12 @@
       <td class="c13"><img src="img/m83-hurry up we re dreaming.jpg"></td>
     </tr>
     <tr class="l2">
-      <td class="c1"><img src="img/led zepplin-physical graffiti.jpg"></td>
-      <td class="c2"><img src="img/bat for lashes-the haunted man.jpg"></td>
+      <td class="c1 ko"><img src="img/bat for lashes-the haunted man.jpg"></td>
+      <td class="c2"><img src="img/led zepplin-physical graffiti.jpg"></td>
       <td class="c3"><img src="img/birdy-birdy.jpg"></td>
       <td class="c4"><img src="img/es posthumus-unearthed.jpg"></td>
       <td class="c5"><img src="img/ellie goulding-bright lights.jpg"></td>
-      <td class="c6"><img src="img/muse-black holes.jpg"></td>
+      <td class="c6"><img src="img/muse-black holes and revelation.jpg"></td>
       <td class="c7"><img src="img/jimi hendrix-isle.jpg"></td>
       <td class="c8"><img src="img/kavinsky-nightcall.jpg"></td>
       <td class="c9"><img src="img/madonna-true blue.jpg"></td>
