update images and viewer

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
     .ko {
       background: red;
     }
-    .ko img {
-      opacity: 0.5;
-    }
   </style>
 </head>
 <body>
@@ -79,103 +76,103 @@
       <td class="c13"><img src="img/0empty.jpg"></td>
     </tr>
     <tr class="l10">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
-      <td class="c4"><img src="img/0empty.jpg"></td>
-      <td class="c5"><img src="img/0empty.jpg"></td>
-      <td class="c6"><img src="img/0empty.jpg"></td>
-      <td class="c7"><img src="img/0empty.jpg"></td>
-      <td class="c8"><img src="img/0empty.jpg"></td>
-      <td class="c9"><img src="img/0empty.jpg"></td>
-      <td class="c10"><img src="img/0empty.jpg"></td>
-      <td class="c11"><img src="img/0empty.jpg"></td>
-      <td class="c12"><img src="img/0empty.jpg"></td>
-      <td class="c13"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/ed sheeran-devide.jpg"></td>
+      <td class="c2 ko"><img src="img/pink floyd-the wall.jpg"></td>
+      <td class="c3 ko"><img src="img/blondie-blondie.jpg"></td>
+      <td class="c4 ko"><img src="img/patti smith-horses.jpg"></td>
+      <td class="c5 ko"><img src="img/the beatles-abbey road.jpg"></td>
+      <td class="c6 ko"><img src="img/queen-queen 2.jpg"></td>
+      <td class="c7 ko"><img src="img/john lennon-imagine.jpg"></td>
+      <td class="c8 ko"><img src="img/rone-tohu bohu.jpg"></td>
+      <td class="c9 ko"><img src="img/linkin park-meteora.jpg"></td>
+      <td class="c10 ko"><img src="img/killers-hot fuss.jpg"></td>
+      <td class="c11 ko"><img src="img/daft punk-random access memories.jpg"></td>
+      <td class="c12 ko"><img src="img/alt j-an awesome wave.jpg"></td>
+      <td class="c13 ko"><img src="img/marron 5-overexposed.jpg"></td>
     </tr>
     <tr class="l9">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
-      <td class="c4"><img src="img/0empty.jpg"></td>
-      <td class="c5"><img src="img/0empty.jpg"></td>
-      <td class="c6"><img src="img/0empty.jpg"></td>
-      <td class="c7"><img src="img/0empty.jpg"></td>
-      <td class="c8"><img src="img/0empty.jpg"></td>
-      <td class="c9"><img src="img/0empty.jpg"></td>
-      <td class="c10"><img src="img/0empty.jpg"></td>
-      <td class="c11"><img src="img/0empty.jpg"></td>
-      <td class="c12"><img src="img/0empty.jpg"></td>
-      <td class="c13"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/radiohead-ok computer.jpg"></td>
+      <td class="c2 ko"><img src="img/1bob marley-catch a fire.jpg"></td>
+      <td class="c3 ko"><img src="img/pixies-indie cindy.jpg"></td>
+      <td class="c4 ko"><img src="img/scorpions-love at first sting.jpg"></td>
+      <td class="c5 ko"><img src="img/air-talkie walkie.jpg"></td>
+      <td class="c6 ko"><img src="img/system of a down-toxicity.jpg"></td>
+      <td class="c7 ko"><img src="img/nirvana-nevermind.jpg"></td>
+      <td class="c8 ko"><img src="img/the police-ghost in the machine.jpg"></td>
+      <td class="c9 ko"><img src="img/muse-origin of symmetry.jpg"></td>
+      <td class="c10 ko"><img src="img/the who-whos next.jpg"></td>
+      <td class="c11 ko"><img src="img/red hot chili peppers-stadium arcadium.jpg"></td>
+      <td class="c12 ko"><img src="img/the white stripes-elephant.jpg"></td>
+      <td class="c13 ko"><img src="img/indochine-laventurier.jpg"></td>
     </tr>
     <tr class="l8">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
-      <td class="c4"><img src="img/0empty.jpg"></td>
-      <td class="c5"><img src="img/0empty.jpg"></td>
-      <td class="c6"><img src="img/0empty.jpg"></td>
-      <td class="c7"><img src="img/0empty.jpg"></td>
-      <td class="c8"><img src="img/0empty.jpg"></td>
-      <td class="c9"><img src="img/0empty.jpg"></td>
-      <td class="c10"><img src="img/0empty.jpg"></td>
-      <td class="c11"><img src="img/0empty.jpg"></td>
-      <td class="c12"><img src="img/0empty.jpg"></td>
-      <td class="c13"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/dire straits-brothers in arms.jpg"></td>
+      <td class="c2 ko"><img src="img/acdc-back in black.jpg"></td>
+      <td class="c3 ko"><img src="img/placebo-sleeping with ghosts.jpg"></td>
+      <td class="c4 ko"><img src="img/sia-this is acting.jpg"></td>
+      <td class="c5 ko"><img src="img/toto-africa.jpg"></td>
+      <td class="c6 ko"><img src="img/the clash-london calling.jpg"></td>
+      <td class="c7 ko"><img src="img/the velvet underground-the velvet underground.jpg"></td>
+      <td class="c8 ko"><img src="img/the beatles-sgt peppers lonely hear.jpg"></td>
+      <td class="c9 ko"><img src="img/pink floyd-the dark side of the moon.jpg"></td>
+      <td class="c10 ko"><img src="img/serge gainsbourg-histoire de melody nelson.jpg"></td>
+      <td class="c11 ko"><img src="img/u2-war.jpg"></td>
+      <td class="c12 ko"><img src="img/tracy chapman-tracy chapman.jpg"></td>
+      <td class="c13 ko"><img src="img/the eagles-hotel california.jpg"></td>
     </tr>
     <tr class="l7">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
-      <td class="c4"><img src="img/0empty.jpg"></td>
-      <td class="c5"><img src="img/0empty.jpg"></td>
-      <td class="c6"><img src="img/0empty.jpg"></td>
-      <td class="c7"><img src="img/0empty.jpg"></td>
-      <td class="c8"><img src="img/0empty.jpg"></td>
-      <td class="c9"><img src="img/0empty.jpg"></td>
-      <td class="c10"><img src="img/0empty.jpg"></td>
-      <td class="c11"><img src="img/0empty.jpg"></td>
-      <td class="c12"><img src="img/0empty.jpg"></td>
-      <td class="c13"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/alain souchon-cest comme vous voulez.jpg"></td>
+      <td class="c2 ko"><img src="img/the police-greatest_hits.jpg"></td>
+      <td class="c3 ko"><img src="img/van halen.jpg"></td>
+      <td class="c4 ko"><img src="img/phoenix-wolfgang amadeus phoenix.jpg"></td>
+      <td class="c5 ko"><img src="img/shakira-eldorado.jpg"></td>
+      <td class="c6 ko"><img src="img/amy winehouse-back to black.jpg"></td>
+      <td class="c7 ko"><img src="img/coldplay-a head full of dreams.jpg"></td>
+      <td class="c8 ko"><img src="img/led zeppelin led zeppelin.jpg"></td>
+      <td class="c9 ko"><img src="img/the weeknd-starboy.jpg"></td>
+      <td class="c10 ko"><img src="img/grace jones-island life.jpg"></td>
+      <td class="c11 ko"><img src="img/supertramp-breakfast in america.jpg"></td>
+      <td class="c12 ko"><img src="img/no doubt-tragic kingdom.jpg"></td>
+      <td class="c13 ko"><img src="img/boulevard des airs-paris buenos aires.jpg"></td>
     </tr>
     <tr class="l6">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
-      <td class="c4"><img src="img/0empty.jpg"></td>
-      <td class="c5"><img src="img/0empty.jpg"></td>
-      <td class="c6"><img src="img/0empty.jpg"></td>
-      <td class="c7"><img src="img/0empty.jpg"></td>
-      <td class="c8"><img src="img/0empty.jpg"></td>
-      <td class="c9"><img src="img/0empty.jpg"></td>
-      <td class="c10"><img src="img/0empty.jpg"></td>
-      <td class="c11"><img src="img/0empty.jpg"></td>
-      <td class="c12"><img src="img/0empty.jpg"></td>
-      <td class="c13"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/metallica-master of puppets.jpg"></td>
+      <td class="c2 ko"><img src="img/johnny cash-american iv the man come.jpg"></td>
+      <td class="c3 ko"><img src="img/david bowie-aladdin sane.jpg"></td>
+      <td class="c4 ko"><img src="img/daft punk-discovery.jpg"></td>
+      <td class="c5 ko"><img src="img/muse-the resistance.jpg"></td>
+      <td class="c6 ko"><img src="img/jain-zanaka.jpg"></td>
+      <td class="c7 ko"><img src="img/moby-play.jpg"></td>
+      <td class="c8 ko"><img src="img/offspring-conspiracy of one.jpg"></td>
+      <td class="c9 ko"><img src="img/michael jackson-thriller.jpg"></td>
+      <td class="c10 ko"><img src="img/manu chao-clandestino.jpg"></td>
+      <td class="c11 ko"><img src="img/avicii-true.jpg"></td>
+      <td class="c12 ko"><img src="img/supertramp-crisis.jpg"></td>
+      <td class="c13 ko"><img src="img/offspring-americana.jpg"></td>
     </tr>
     <tr class="l5">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
-      <td class="c4"><img src="img/0empty.jpg"></td>
-      <td class="c5"><img src="img/0empty.jpg"></td>
-      <td class="c6"><img src="img/0empty.jpg"></td>
-      <td class="c7"><img src="img/0empty.jpg"></td>
-      <td class="c8"><img src="img/0empty.jpg"></td>
-      <td class="c9"><img src="img/0empty.jpg"></td>
-      <td class="c10"><img src="img/0empty.jpg"></td>
-      <td class="c11"><img src="img/0empty.jpg"></td>
-      <td class="c12"><img src="img/0empty.jpg"></td>
-      <td class="c13"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/miles davis-tutu.jpg"></td>
+      <td class="c2 ko"><img src="img/kygo-cloud nine.jpg"></td>
+      <td class="c3 ko"><img src="img/macklemore ryan lewis-the heist.jpg"></td>
+      <td class="c4 ko"><img src="img/jeff buckley-grace.jpg"></td>
+      <td class="c5 ko"><img src="img/pink floyd-division bell.jpg"></td>
+      <td class="c6 ko"><img src="img/justice-cross.jpg"></td>
+      <td class="c7 ko"><img src="img/pink floyd-animals.jpg"></td>
+      <td class="c8 ko"><img src="img/joy division-unknown pleasures.jpg"></td>
+      <td class="c9 ko"><img src="img/gil scott heron-the revolution will not be televised.jpg"></td>
+      <td class="c10 ko"><img src="img/acdc-highway to hell.jpg"></td>
+      <td class="c11 ko"><img src="img/anathema-weather system.png"></td>
+      <td class="c12 ko"><img src="img/empire of the sun-walking on a dream.jpg"></td>
+      <td class="c13 ko"><img src="img/bob dylan-the freewheelin bob dylan.jpg"></td>
     </tr>
     <tr class="l4">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
-      <td class="c4"><img src="img/0empty.jpg"></td>
-      <td class="c5"><img src="img/0empty.jpg"></td>
-      <td class="c6"><img src="img/0empty.jpg"></td>
-      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/coldplay-a rush of blood.jpg"></td>
+      <td class="c2 ko"><img src="img/apocalyptica-cult.jpg"></td>
+      <td class="c3 ko"><img src="img/mgmt-oracular spectacular.jpg"></td>
+      <td class="c4 ko"><img src="img/the beach boys-surfin usa.jpg"></td>
+      <td class="c5 ko"><img src="img/telephone-crache ton venin.jpg"></td>
+      <td class="c6 ko"><img src="img/red hot chili pepper-californication.jpg"></td>
+      <td class="c7 ko"><img src="img/tsfh-invincible.jpg"></td>
       <td class="c8"><img src="img/lindsey stirling.jpg"></td>
       <td class="c9"><img src="img/bjork-homogenic.jpg"></td>
       <td class="c10"><img src="img/bongo botrako-todos los dias sale el sol.jpg"></td>
@@ -184,13 +181,13 @@
       <td class="c13"><img src="img/orbital-orbital 2.jpg"></td>
     </tr>
     <tr class="l3">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
-      <td class="c4"><img src="img/0empty.jpg"></td>
-      <td class="c5"><img src="img/0empty.jpg"></td>
-      <td class="c6"><img src="img/0empty.jpg"></td>
-      <td class="c7"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/eddie vedder-ukulele songs.jpg"></td>
+      <td class="c2 ko"><img src="img/la rue ketanou-en attendant les caravanes.jpg"></td>
+      <td class="c3 ko"><img src="img/the xx-xx.jpg"></td>
+      <td class="c4 ko"><img src="img/the cranberries-no need to argue.jpg"></td>
+      <td class="c5 ko"><img src="img/tryo-mamagubida.jpg"></td>
+      <td class="c6 ko"><img src="img/saez-varsovie lalhambra paris.jpg"></td>
+      <td class="c7 ko"><img src="img/spice girls-spice.jpg"></td>
       <td class="c8"><img src="img/lady gaga-the fame monster.jpg"></td>
       <td class="c9"><img src="img/madeon-adventure.jpg"></td>
       <td class="c10"><img src="img/ludovico einaudi-islands.jpg"></td>
