--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     .ko {
       background: red;
     }
+    .p {
+      background: yellow;
+    }
   </style>
 </head>
 <body>
@@ -163,16 +166,16 @@
       <td class="c10 ko"><img src="img/acdc-highway to hell.jpg"></td>
       <td class="c11 ko"><img src="img/anathema-weather system.png"></td>
       <td class="c12 ko"><img src="img/empire of the sun-walking on a dream.jpg"></td>
-      <td class="c13 ko"><img src="img/bob dylan-the freewheelin bob dylan.jpg"></td>
+      <td class="c13 p"><img src="img/bob dylan-the freewheelin bob dylan.jpg"></td>
     </tr>
     <tr class="l4">
-      <td class="c1 ko"><img src="img/coldplay-a rush of blood.jpg"></td>
-      <td class="c2 ko"><img src="img/apocalyptica-cult.jpg"></td>
-      <td class="c3 ko"><img src="img/mgmt-oracular spectacular.jpg"></td>
-      <td class="c4 ko"><img src="img/the beach boys-surfin usa.jpg"></td>
-      <td class="c5 ko"><img src="img/telephone-crache ton venin.jpg"></td>
-      <td class="c6 ko"><img src="img/red hot chili pepper-californication.jpg"></td>
-      <td class="c7 ko"><img src="img/tsfh-invincible.jpg"></td>
+      <td class="c1 p"><img src="img/coldplay-a rush of blood.jpg"></td>
+      <td class="c2 p"><img src="img/apocalyptica-cult.jpg"></td>
+      <td class="c3 p"><img src="img/mgmt-oracular spectacular.jpg"></td>
+      <td class="c4 p"><img src="img/the beach boys-surfin usa.jpg"></td>
+      <td class="c5 p"><img src="img/telephone-crache ton venin.jpg"></td>
+      <td class="c6 p"><img src="img/red hot chili pepper-californication.jpg"></td>
+      <td class="c7 p"><img src="img/tsfh-invincible.jpg"></td>
       <td class="c8"><img src="img/lindsey stirling.jpg"></td>
       <td class="c9"><img src="img/bjork-homogenic.jpg"></td>
       <td class="c10"><img src="img/bongo botrako-todos los dias sale el sol.jpg"></td>
@@ -181,13 +184,13 @@
       <td class="c13"><img src="img/orbital-orbital 2.jpg"></td>
     </tr>
     <tr class="l3">
-      <td class="c1 ko"><img src="img/eddie vedder-ukulele songs.jpg"></td>
-      <td class="c2 ko"><img src="img/la rue ketanou-en attendant les caravanes.jpg"></td>
-      <td class="c3 ko"><img src="img/the xx-xx.jpg"></td>
-      <td class="c4 ko"><img src="img/the cranberries-no need to argue.jpg"></td>
-      <td class="c5 ko"><img src="img/tryo-mamagubida.jpg"></td>
-      <td class="c6 ko"><img src="img/saez-varsovie lalhambra paris.jpg"></td>
-      <td class="c7 ko"><img src="img/spice girls-spice.jpg"></td>
+      <td class="c1 p"><img src="img/eddie vedder-ukulele songs.jpg"></td>
+      <td class="c2 p"><img src="img/la rue ketanou-en attendant les caravanes.jpg"></td>
+      <td class="c3 p"><img src="img/the xx-xx.jpg"></td>
+      <td class="c4 p"><img src="img/the cranberries-no need to argue.jpg"></td>
+      <td class="c5 p"><img src="img/tryo-mamagubida.jpg"></td>
+      <td class="c6 p"><img src="img/saez-varsovie lalhambra paris.jpg"></td>
+      <td class="c7 p"><img src="img/spice girls-spice.jpg"></td>
       <td class="c8"><img src="img/lady gaga-the fame monster.jpg"></td>
       <td class="c9"><img src="img/madeon-adventure.jpg"></td>
       <td class="c10"><img src="img/ludovico einaudi-islands.jpg"></td>
@@ -196,7 +199,7 @@
       <td class="c13"><img src="img/m83-hurry up we re dreaming.jpg"></td>
     </tr>
     <tr class="l2">
-      <td class="c1 ko"><img src="img/bat for lashes-the haunted man.jpg"></td>
+      <td class="c1 p"><img src="img/bat for lashes-the haunted man.jpg"></td>
       <td class="c2"><img src="img/led zepplin-physical graffiti.jpg"></td>
       <td class="c3"><img src="img/birdy-birdy.jpg"></td>
       <td class="c4"><img src="img/es posthumus-unearthed.jpg"></td>
