--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <td class="c9"><img src="img/0empty.jpg"></td>
       <td class="c10"><img src="img/0empty.jpg"></td>
       <td class="c11"><img src="img/0empty.jpg"></td>
-      <td class="c12"><img src="img/0empty.jpg"></td>
+      <td class="c12 ko"><img src="img/the rolling stones-jump back.jpg"></td>
       <td class="c13"><img src="img/0empty.jpg"></td>
     </tr>
     <tr class="l10">
@@ -95,7 +95,7 @@
     </tr>
     <tr class="l9">
       <td class="c1 ko"><img src="img/radiohead-ok computer.jpg"></td>
-      <td class="c2 ko"><img src="img/1bob marley-catch a fire.jpg"></td>
+      <td class="c2 ko"><img src="img/bob marley-catch a fire.jpg"></td>
       <td class="c3 ko"><img src="img/pixies-indie cindy.jpg"></td>
       <td class="c4 ko"><img src="img/scorpions-love at first sting.jpg"></td>
       <td class="c5 ko"><img src="img/air-talkie walkie.jpg"></td>
@@ -139,34 +139,34 @@
       <td class="c13 ko"><img src="img/boulevard des airs-paris buenos aires.jpg"></td>
     </tr>
     <tr class="l6">
-      <td class="c1 ko"><img src="img/metallica-master of puppets.jpg"></td>
-      <td class="c2 ko"><img src="img/johnny cash-american iv the man come.jpg"></td>
-      <td class="c3 ko"><img src="img/david bowie-aladdin sane.jpg"></td>
-      <td class="c4 ko"><img src="img/daft punk-discovery.jpg"></td>
-      <td class="c5 ko"><img src="img/pink floyd-division bell.jpg"></td>
-      <td class="c6 ko"><img src="img/jain-zanaka.jpg"></td>
-      <td class="c7 ko"><img src="img/moby-play.jpg"></td>
-      <td class="c8 ko"><img src="img/offspring-conspiracy of one.jpg"></td>
-      <td class="c9 ko"><img src="img/michael jackson-thriller.jpg"></td>
-      <td class="c10 ko"><img src="img/manu chao-clandestino.jpg"></td>
-      <td class="c11 ko"><img src="img/avicii-true.jpg"></td>
+      <td class="c1"><img src="img/offspring-conspiracy of one.jpg"></td>
+      <td class="c2"><img src="img/johnny cash-american iv the man come.jpg"></td>
+      <td class="c3"><img src="img/david bowie-aladdin sane.jpg"></td>
+      <td class="c4"><img src="img/daft punk-discovery.jpg"></td>
+      <td class="c5"><img src="img/pink floyd-division bell.jpg"></td>
+      <td class="c6"><img src="img/jain-zanaka.jpg"></td>
+      <td class="c7"><img src="img/moby-play.jpg"></td>
+      <td class="c8"><img src="img/metallica-master of puppets.jpg"></td>
+      <td class="c9"><img src="img/michael jackson-thriller.jpg"></td>
+      <td class="c10"><img src="img/manu chao-clandestino.jpg"></td>
+      <td class="c11"><img src="img/avicii-true.jpg"></td>
       <td class="c12 ko"><img src="img/supertramp-crisis.jpg"></td>
-      <td class="c13 ko"><img src="img/offspring-americana.jpg"></td>
+      <td class="c13"><img src="img/offspring-americana.jpg"></td>
     </tr>
     <tr class="l5">
-      <td class="c1 p"><img src="img/miles davis-tutu.jpg"></td>
-      <td class="c2 p"><img src="img/kygo-cloud nine.jpg"></td>
-      <td class="c3 p"><img src="img/macklemore ryan lewis-the heist.jpg"></td>
-      <td class="c4 p"><img src="img/jeff buckley-grace.jpg"></td>
-      <td class="c5 p"><img src="img/muse-the resistance.jpg"></td>
-      <td class="c6 p"><img src="img/justice-cross.jpg"></td>
-      <td class="c7 p"><img src="img/pink floyd-animals.jpg"></td>
-      <td class="c8 p"><img src="img/joy division-unknown pleasures.jpg"></td>
-      <td class="c9 p"><img src="img/gil scott heron-the revolution will not be televised.jpg"></td>
-      <td class="c10 p"><img src="img/acdc-highway to hell.jpg"></td>
-      <td class="c11 p"><img src="img/anathema-weather system.png"></td>
-      <td class="c12 p"><img src="img/empire of the sun-walking on a dream.jpg"></td>
-      <td class="c13 p"><img src="img/bob dylan-the freewheelin bob dylan.jpg"></td>
+      <td class="c1"><img src="img/miles davis-tutu.jpg"></td>
+      <td class="c2"><img src="img/kygo-cloud nine.jpg"></td>
+      <td class="c3"><img src="img/macklemore ryan lewis-the heist.jpg"></td>
+      <td class="c4"><img src="img/jeff buckley-grace.jpg"></td>
+      <td class="c5"><img src="img/muse-the resistance.jpg"></td>
+      <td class="c6"><img src="img/justice-cross.jpg"></td>
+      <td class="c7"><img src="img/pink floyd-animals.jpg"></td>
+      <td class="c8"><img src="img/joy division-unknown pleasures.jpg"></td>
+      <td class="c9"><img src="img/gil scott heron-we re new here.png"></td>
+      <td class="c10"><img src="img/acdc-highway to hell.jpg"></td>
+      <td class="c11"><img src="img/anathema-weather system.png"></td>
+      <td class="c12"><img src="img/empire of the sun-walking on a dream.jpg"></td>
+      <td class="c13"><img src="img/bob dylan-the freewheelin bob dylan.jpg"></td>
     </tr>
     <tr class="l4">
       <td class="c1"><img src="img/coldplay-a rush of blood.jpg"></td>
