--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       <td class="c8"><img src="img/0empty.jpg"></td>
       <td class="c9"><img src="img/0empty.jpg"></td>
       <td class="c10"><img src="img/0empty.jpg"></td>
-      <td class="c11"><img src="img/0empty.jpg"></td>
+      <td class="c11 ko"><img src="img/fun-some nights.jpg"></td>
       <td class="c12 ko"><img src="img/the rolling stones-jump back.jpg"></td>
-      <td class="c13"><img src="img/0empty.jpg"></td>
+      <td class="c13 ko"><img src="img/arcade fire-funeral.jpg"></td>
     </tr>
     <tr class="l10">
       <td class="c1 ko"><img src="img/ed sheeran-devide.jpg"></td>
