update images and display

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
       <td class="c13"><img src="img/0empty.jpg"></td>
     </tr>
     <tr class="l11">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
-      <td class="c4"><img src="img/0empty.jpg"></td>
-      <td class="c5"><img src="img/0empty.jpg"></td>
-      <td class="c6"><img src="img/0empty.jpg"></td>
-      <td class="c7"><img src="img/0empty.jpg"></td>
-      <td class="c8"><img src="img/0empty.jpg"></td>
-      <td class="c9"><img src="img/0empty.jpg"></td>
-      <td class="c10"><img src="img/0empty.jpg"></td>
+      <td class="c1"><img src="img/keane-under the iron sea.jpg"></td>
+      <td class="c2"><img src="img/fort minor-the rising tied.jpg"></td>
+      <td class="c3"><img src="img/incubus-light grenades.jpg"></td>
+      <td class="c4"><img src="img/procol harum-procol harum.jpg"></td>
+      <td class="c5"><img src="img/kaiser chiefs-souvenir.jpg"></td>
+      <td class="c6"><img src="img/the strokes-angles.jpg"></td>
+      <td class="c7"><img src="img/two door cinema club-tourist history.jpg"></td>
+      <td class="c8"><img src="img/oasis-definitely maybe.jpg"></td>
+      <td class="c9"><img src="img/foo fighters-echoes silence patience grace.jpg"></td>
+      <td class="c10"><img src="img/flume-skin.jpg"></td>
       <td class="c11 ko"><img src="img/fun-some nights.jpg"></td>
       <td class="c12 ko"><img src="img/the rolling stones-jump back.jpg"></td>
       <td class="c13 ko"><img src="img/arcade fire-funeral.jpg"></td>
@@ -81,7 +81,7 @@
     <tr class="l10">
       <td class="c1 ko"><img src="img/ed sheeran-devide.jpg"></td>
       <td class="c2 ko"><img src="img/pink floyd-the wall.jpg"></td>
-      <td class="c3 ko"><img src="img/blondie-blondie.jpg"></td>
+      <td class="c3 ko"><img src="img/blondie-parallel lines.jpg"></td>
       <td class="c4 ko"><img src="img/patti smith-horses.jpg"></td>
       <td class="c5 ko"><img src="img/the beatles-abbey road.jpg"></td>
       <td class="c6 ko"><img src="img/queen-queen 2.jpg"></td>
@@ -124,19 +124,19 @@
       <td class="c13 ko"><img src="img/the eagles-hotel california.jpg"></td>
     </tr>
     <tr class="l7">
-      <td class="c1 ko"><img src="img/alain souchon-cest comme vous voulez.jpg"></td>
-      <td class="c2 ko"><img src="img/the police-greatest_hits.jpg"></td>
-      <td class="c3 ko"><img src="img/van halen.jpg"></td>
-      <td class="c4 ko"><img src="img/phoenix-wolfgang amadeus phoenix.jpg"></td>
-      <td class="c5 ko"><img src="img/shakira-eldorado.jpg"></td>
-      <td class="c6 ko"><img src="img/amy winehouse-back to black.jpg"></td>
-      <td class="c7 ko"><img src="img/coldplay-a head full of dreams.jpg"></td>
-      <td class="c8 ko"><img src="img/led zeppelin led zeppelin.jpg"></td>
-      <td class="c9 ko"><img src="img/the weeknd-starboy.jpg"></td>
-      <td class="c10 ko"><img src="img/grace jones-island life.jpg"></td>
-      <td class="c11 ko"><img src="img/supertramp-breakfast in america.jpg"></td>
-      <td class="c12 ko"><img src="img/no doubt-tragic kingdom.jpg"></td>
-      <td class="c13 ko"><img src="img/boulevard des airs-paris buenos aires.jpg"></td>
+      <td class="c1 p"><img src="img/alain souchon-cest comme vous voulez.jpg"></td>
+      <td class="c2 p"><img src="img/the police-greatest_hits.jpg"></td>
+      <td class="c3 p"><img src="img/van halen-1984.jpg"></td>
+      <td class="c4 p"><img src="img/phoenix-wolfgang amadeus phoenix.jpg"></td>
+      <td class="c5 p"><img src="img/shakira-eldorado.jpg"></td>
+      <td class="c6 p"><img src="img/amy winehouse-back to black.jpg"></td>
+      <td class="c7 p"><img src="img/coldplay-a head full of dreams.jpg"></td>
+      <td class="c8 p"><img src="img/led zeppelin led zeppelin.jpg"></td>
+      <td class="c9 p"><img src="img/the weeknd-starboy.jpg"></td>
+      <td class="c10 p"><img src="img/supertramp-breakfast in america.jpg"></td>
+      <td class="c11 p"><img src="img/grace jones-island life.jpg"></td>
+      <td class="c12 p"><img src="img/no doubt-tragic kingdom.jpg"></td>
+      <td class="c13 p"><img src="img/boulevard des airs-paris buenos aires.jpg"></td>
     </tr>
     <tr class="l6">
       <td class="c1"><img src="img/offspring-conspiracy of one.jpg"></td>
@@ -150,7 +150,7 @@
       <td class="c9"><img src="img/michael jackson-thriller.jpg"></td>
       <td class="c10"><img src="img/manu chao-clandestino.jpg"></td>
       <td class="c11"><img src="img/avicii-true.jpg"></td>
-      <td class="c12 ko"><img src="img/supertramp-crisis.jpg"></td>
+      <td class="c12 p"><img src="img/supertramp-crisis.jpg"></td>
       <td class="c13"><img src="img/offspring-americana.jpg"></td>
     </tr>
     <tr class="l5">
