--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
       <td class="c13"><img src="img/0empty.jpg"></td>
     </tr>
     <tr class="l11">
-      <td class="c1"><img src="img/keane-under the iron sea.jpg"></td>
-      <td class="c2"><img src="img/fort minor-the rising tied.jpg"></td>
-      <td class="c3"><img src="img/incubus-light grenades.jpg"></td>
-      <td class="c4"><img src="img/procol harum-procol harum.jpg"></td>
-      <td class="c5"><img src="img/kaiser chiefs-souvenir.jpg"></td>
-      <td class="c6"><img src="img/the strokes-angles.jpg"></td>
-      <td class="c7"><img src="img/two door cinema club-tourist history.jpg"></td>
-      <td class="c8"><img src="img/oasis-definitely maybe.jpg"></td>
-      <td class="c9"><img src="img/foo fighters-echoes silence patience grace.jpg"></td>
-      <td class="c10"><img src="img/flume-skin.jpg"></td>
+      <td class="c1 ko"><img src="img/keane-under the iron sea.jpg"></td>
+      <td class="c2 ko"><img src="img/fort minor-the rising tied.jpg"></td>
+      <td class="c3 ko"><img src="img/incubus-light grenades.jpg"></td>
+      <td class="c4 ko"><img src="img/procol harum-procol harum.jpg"></td>
+      <td class="c5 ko"><img src="img/kaiser chiefs-souvenir.jpg"></td>
+      <td class="c6 ko"><img src="img/the strokes-angles.jpg"></td>
+      <td class="c7 ko"><img src="img/two door cinema club-tourist history.jpg"></td>
+      <td class="c8 ko"><img src="img/oasis-definitely maybe.jpg"></td>
+      <td class="c9 ko"><img src="img/foo fighters-echoes silence patience grace.jpg"></td>
+      <td class="c10 ko"><img src="img/flume-skin.jpg"></td>
       <td class="c11 ko"><img src="img/fun-some nights.jpg"></td>
       <td class="c12 ko"><img src="img/the rolling stones-jump back.jpg"></td>
       <td class="c13 ko"><img src="img/arcade fire-funeral.jpg"></td>
