--- a/index.html
+++ b/index.html
@@ -76,67 +76,67 @@
       <td class="c10 ko"><img src="img/flume-skin.jpg"></td>
       <td class="c11 ko"><img src="img/fun-some nights.jpg"></td>
       <td class="c12 ko"><img src="img/the rolling stones-jump back.jpg"></td>
-      <td class="c13 ko"><img src="img/arcade fire-funeral.jpg"></td>
+      <td class="c13 p"><img src="img/arcade fire-funeral.jpg"></td>
     </tr>
     <tr class="l10">
-      <td class="c1 ko"><img src="img/ed sheeran-devide.jpg"></td>
-      <td class="c2 ko"><img src="img/pink floyd-the wall.jpg"></td>
-      <td class="c3 ko"><img src="img/blondie-parallel lines.jpg"></td>
-      <td class="c4 ko"><img src="img/patti smith-horses.jpg"></td>
-      <td class="c5 ko"><img src="img/the beatles-abbey road.jpg"></td>
-      <td class="c6 ko"><img src="img/queen-queen 2.jpg"></td>
-      <td class="c7 ko"><img src="img/john lennon-imagine.jpg"></td>
-      <td class="c8 ko"><img src="img/rone-tohu bohu.jpg"></td>
-      <td class="c9 ko"><img src="img/linkin park-meteora.jpg"></td>
-      <td class="c10 ko"><img src="img/killers-hot fuss.jpg"></td>
-      <td class="c11 ko"><img src="img/daft punk-random access memories.jpg"></td>
-      <td class="c12 ko"><img src="img/alt j-an awesome wave.jpg"></td>
-      <td class="c13 ko"><img src="img/marron 5-overexposed.jpg"></td>
+      <td class="c1 p"><img src="img/ed sheeran-devide.jpg"></td>
+      <td class="c2 p"><img src="img/pink floyd-the wall.jpg"></td>
+      <td class="c3 p"><img src="img/blondie-parallel lines.jpg"></td>
+      <td class="c4 p"><img src="img/patti smith-horses.jpg"></td>
+      <td class="c5 p"><img src="img/the beatles-abbey road.jpg"></td>
+      <td class="c6 p"><img src="img/queen-queen 2.jpg"></td>
+      <td class="c7 p"><img src="img/john lennon-imagine.jpg"></td>
+      <td class="c8 p"><img src="img/rone-tohu bohu.jpg"></td>
+      <td class="c9 p"><img src="img/linkin park-meteora.jpg"></td>
+      <td class="c10 p"><img src="img/killers-hot fuss.jpg"></td>
+      <td class="c11 p"><img src="img/daft punk-random access memories.jpg"></td>
+      <td class="c12 p"><img src="img/alt j-an awesome wave.jpg"></td>
+      <td class="c13 p"><img src="img/marron 5-overexposed.jpg"></td>
     </tr>
     <tr class="l9">
-      <td class="c1 ko"><img src="img/radiohead-ok computer.jpg"></td>
-      <td class="c2 ko"><img src="img/bob marley-catch a fire.jpg"></td>
-      <td class="c3 ko"><img src="img/pixies-indie cindy.jpg"></td>
-      <td class="c4 ko"><img src="img/scorpions-love at first sting.jpg"></td>
-      <td class="c5 ko"><img src="img/air-talkie walkie.jpg"></td>
-      <td class="c6 ko"><img src="img/system of a down-toxicity.jpg"></td>
-      <td class="c7 ko"><img src="img/nirvana-nevermind.jpg"></td>
-      <td class="c8 ko"><img src="img/the police-ghost in the machine.jpg"></td>
-      <td class="c9 ko"><img src="img/muse-origin of symmetry.jpg"></td>
-      <td class="c10 ko"><img src="img/the who-whos next.jpg"></td>
-      <td class="c11 ko"><img src="img/red hot chili peppers-stadium arcadium.jpg"></td>
-      <td class="c12 ko"><img src="img/the white stripes-elephant.jpg"></td>
-      <td class="c13 ko"><img src="img/indochine-laventurier.jpg"></td>
+      <td class="c1"><img src="img/radiohead-ok computer.jpg"></td>
+      <td class="c2"><img src="img/bob marley-catch a fire.jpg"></td>
+      <td class="c3"><img src="img/pixies-indie cindy.jpg"></td>
+      <td class="c4"><img src="img/scorpions-love at first sting.jpg"></td>
+      <td class="c5"><img src="img/air-talkie walkie.jpg"></td>
+      <td class="c6"><img src="img/system of a down-toxicity.jpg"></td>
+      <td class="c7"><img src="img/nirvana-nevermind.jpg"></td>
+      <td class="c8"><img src="img/the police-ghost in the machine.jpg"></td>
+      <td class="c9"><img src="img/muse-origin of symmetry.jpg"></td>
+      <td class="c10"><img src="img/the who-whos next.jpg"></td>
+      <td class="c11"><img src="img/red hot chili peppers-stadium arcadium.jpg"></td>
+      <td class="c12"><img src="img/the white stripes-elephant.jpg"></td>
+      <td class="c13"><img src="img/indochine-laventurier.jpg"></td>
     </tr>
     <tr class="l8">
-      <td class="c1 ko"><img src="img/dire straits-brothers in arms.jpg"></td>
-      <td class="c2 ko"><img src="img/acdc-back in black.jpg"></td>
-      <td class="c3 ko"><img src="img/placebo-sleeping with ghosts.jpg"></td>
-      <td class="c4 ko"><img src="img/sia-this is acting.jpg"></td>
-      <td class="c5 ko"><img src="img/toto-africa.jpg"></td>
-      <td class="c6 ko"><img src="img/the clash-london calling.jpg"></td>
-      <td class="c7 ko"><img src="img/the velvet underground-the velvet underground.jpg"></td>
-      <td class="c8 ko"><img src="img/the beatles-sgt peppers lonely hear.jpg"></td>
-      <td class="c9 ko"><img src="img/pink floyd-the dark side of the moon.jpg"></td>
-      <td class="c10 ko"><img src="img/serge gainsbourg-histoire de melody nelson.jpg"></td>
-      <td class="c11 ko"><img src="img/u2-war.jpg"></td>
-      <td class="c12 ko"><img src="img/tracy chapman-tracy chapman.jpg"></td>
-      <td class="c13 ko"><img src="img/the eagles-hotel california.jpg"></td>
+      <td class="c1"><img src="img/dire straits-brothers in arms.jpg"></td>
+      <td class="c2"><img src="img/acdc-back in black.jpg"></td>
+      <td class="c3"><img src="img/placebo-sleeping with ghosts.jpg"></td>
+      <td class="c4"><img src="img/sia-this is acting.jpg"></td>
+      <td class="c5"><img src="img/toto-africa.jpg"></td>
+      <td class="c6"><img src="img/the clash-london calling.jpg"></td>
+      <td class="c7"><img src="img/the velvet underground-the velvet underground.jpg"></td>
+      <td class="c8"><img src="img/the beatles-sgt peppers lonely hear.jpg"></td>
+      <td class="c9"><img src="img/pink floyd-the dark side of the moon.jpg"></td>
+      <td class="c10"><img src="img/serge gainsbourg-histoire de melody nelson.jpg"></td>
+      <td class="c11"><img src="img/u2-war.jpg"></td>
+      <td class="c12"><img src="img/tracy chapman-tracy chapman.jpg"></td>
+      <td class="c13"><img src="img/the eagles-hotel california.jpg"></td>
     </tr>
     <tr class="l7">
-      <td class="c1 p"><img src="img/alain souchon-cest comme vous voulez.jpg"></td>
-      <td class="c2 p"><img src="img/the police-greatest_hits.jpg"></td>
-      <td class="c3 p"><img src="img/van halen-1984.jpg"></td>
-      <td class="c4 p"><img src="img/phoenix-wolfgang amadeus phoenix.jpg"></td>
-      <td class="c5 p"><img src="img/shakira-eldorado.jpg"></td>
-      <td class="c6 p"><img src="img/amy winehouse-back to black.jpg"></td>
-      <td class="c7 p"><img src="img/coldplay-a head full of dreams.jpg"></td>
-      <td class="c8 p"><img src="img/led zeppelin led zeppelin.jpg"></td>
-      <td class="c9 p"><img src="img/the weeknd-starboy.jpg"></td>
-      <td class="c10 p"><img src="img/supertramp-breakfast in america.jpg"></td>
-      <td class="c11 p"><img src="img/grace jones-island life.jpg"></td>
-      <td class="c12 p"><img src="img/no doubt-tragic kingdom.jpg"></td>
-      <td class="c13 p"><img src="img/boulevard des airs-paris buenos aires.jpg"></td>
+      <td class="c1"><img src="img/alain souchon-cest comme vous voulez.jpg"></td>
+      <td class="c2"><img src="img/the police-greatest_hits.jpg"></td>
+      <td class="c3"><img src="img/van halen-1984.jpg"></td>
+      <td class="c4"><img src="img/phoenix-wolfgang amadeus phoenix.jpg"></td>
+      <td class="c5"><img src="img/shakira-eldorado.jpg"></td>
+      <td class="c6"><img src="img/amy winehouse-back to black.jpg"></td>
+      <td class="c7"><img src="img/coldplay-a head full of dreams.jpg"></td>
+      <td class="c8"><img src="img/led zeppelin led zeppelin.jpg"></td>
+      <td class="c9"><img src="img/the weeknd-starboy.jpg"></td>
+      <td class="c10"><img src="img/supertramp-breakfast in america.jpg"></td>
+      <td class="c11"><img src="img/grace jones-island life.jpg"></td>
+      <td class="c12"><img src="img/no doubt-tragic kingdom.jpg"></td>
+      <td class="c13"><img src="img/boulevard des airs-paris buenos aires.jpg"></td>
     </tr>
     <tr class="l6">
       <td class="c1"><img src="img/offspring-conspiracy of one.jpg"></td>
@@ -150,7 +150,7 @@
       <td class="c9"><img src="img/michael jackson-thriller.jpg"></td>
       <td class="c10"><img src="img/manu chao-clandestino.jpg"></td>
       <td class="c11"><img src="img/avicii-true.jpg"></td>
-      <td class="c12 p"><img src="img/supertramp-crisis.jpg"></td>
+      <td class="c12"><img src="img/supertramp-crisis.jpg"></td>
       <td class="c13"><img src="img/offspring-americana.jpg"></td>
     </tr>
     <tr class="l5">
