--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       <td class="c13"><img src="img/0empty.jpg"></td>
     </tr>
     <tr class="l12">
-      <td class="c1"><img src="img/0empty.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
-      <td class="c3"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/neil young-on the beach.jpg"></td>
+      <td class="c2 ko"><img src="img/the rolling stones-beggars banguet.jpg"></td>
+      <td class="c3 ko"><img src="img/electric light orchestra-out of the blue.jpg"></td>
       <td class="c4"><img src="img/0empty.jpg"></td>
       <td class="c5"><img src="img/0empty.jpg"></td>
       <td class="c6"><img src="img/0empty.jpg"></td>
@@ -65,33 +65,33 @@
     </tr>
     <tr class="l11">
       <td class="c1 ko"><img src="img/keane-under the iron sea.jpg"></td>
-      <td class="c2 ko"><img src="img/fort minor-the rising tied.jpg"></td>
-      <td class="c3 ko"><img src="img/incubus-light grenades.jpg"></td>
-      <td class="c4 ko"><img src="img/procol harum-procol harum.jpg"></td>
-      <td class="c5 ko"><img src="img/kaiser chiefs-souvenir.jpg"></td>
-      <td class="c6 ko"><img src="img/the strokes-angles.jpg"></td>
-      <td class="c7 ko"><img src="img/two door cinema club-tourist history.jpg"></td>
-      <td class="c8 ko"><img src="img/oasis-definitely maybe.jpg"></td>
-      <td class="c9 ko"><img src="img/foo fighters-echoes silence patience grace.jpg"></td>
-      <td class="c10 ko"><img src="img/flume-skin.jpg"></td>
-      <td class="c11 ko"><img src="img/fun-some nights.jpg"></td>
-      <td class="c12 ko"><img src="img/the rolling stones-jump back.jpg"></td>
-      <td class="c13 p"><img src="img/arcade fire-funeral.jpg"></td>
+      <td class="c2"><img src="img/fort minor-the rising tied.jpg"></td>
+      <td class="c3"><img src="img/incubus-light grenades.jpg"></td>
+      <td class="c4"><img src="img/procol harum-procol harum.jpg"></td>
+      <td class="c5"><img src="img/kaiser chiefs-souvenir.jpg"></td>
+      <td class="c6"><img src="img/the strokes-angles.jpg"></td>
+      <td class="c7"><img src="img/two door cinema club-tourist history.jpg"></td>
+      <td class="c8"><img src="img/oasis-definitely maybe.jpg"></td>
+      <td class="c9"><img src="img/foo fighters-echoes silence patience grace.jpg"></td>
+      <td class="c10"><img src="img/flume-skin.jpg"></td>
+      <td class="c11"><img src="img/fun-some nights.jpg"></td>
+      <td class="c12"><img src="img/the rolling stones-jump back.jpg"></td>
+      <td class="c13"><img src="img/arcade fire-funeral.jpg"></td>
     </tr>
     <tr class="l10">
-      <td class="c1 p"><img src="img/ed sheeran-devide.jpg"></td>
-      <td class="c2 p"><img src="img/pink floyd-the wall.jpg"></td>
-      <td class="c3 p"><img src="img/blondie-parallel lines.jpg"></td>
-      <td class="c4 p"><img src="img/patti smith-horses.jpg"></td>
-      <td class="c5 p"><img src="img/the beatles-abbey road.jpg"></td>
-      <td class="c6 p"><img src="img/queen-queen 2.jpg"></td>
-      <td class="c7 p"><img src="img/john lennon-imagine.jpg"></td>
-      <td class="c8 p"><img src="img/rone-tohu bohu.jpg"></td>
-      <td class="c9 p"><img src="img/linkin park-meteora.jpg"></td>
-      <td class="c10 p"><img src="img/killers-hot fuss.jpg"></td>
-      <td class="c11 p"><img src="img/daft punk-random access memories.jpg"></td>
-      <td class="c12 p"><img src="img/alt j-an awesome wave.jpg"></td>
-      <td class="c13 p"><img src="img/marron 5-overexposed.jpg"></td>
+      <td class="c1"><img src="img/ed sheeran-devide.jpg"></td>
+      <td class="c2"><img src="img/pink floyd-the wall.jpg"></td>
+      <td class="c3"><img src="img/blondie-parallel lines.jpg"></td>
+      <td class="c4"><img src="img/patti smith-horses.jpg"></td>
+      <td class="c5"><img src="img/the beatles-abbey road.jpg"></td>
+      <td class="c6"><img src="img/queen-queen 2.jpg"></td>
+      <td class="c7"><img src="img/john lennon-imagine.jpg"></td>
+      <td class="c8"><img src="img/rone-tohu bohu.jpg"></td>
+      <td class="c9"><img src="img/linkin park-meteora.jpg"></td>
+      <td class="c10"><img src="img/killers-hot fuss.jpg"></td>
+      <td class="c11"><img src="img/daft punk-random access memories.jpg"></td>
+      <td class="c12"><img src="img/alt j-an awesome wave.jpg"></td>
+      <td class="c13"><img src="img/marron 5-overexposed.jpg"></td>
     </tr>
     <tr class="l9">
       <td class="c1"><img src="img/radiohead-ok computer.jpg"></td>
