--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
       <td class="c13"><img src="img/0empty.jpg"></td>
     </tr>
     <tr class="l12">
-      <td class="c1 p"><img src="img/neil young-on the beach.jpg"></td>
-      <td class="c2 p"><img src="img/the rolling stones-beggars banguet.jpg"></td>
-      <td class="c3 p"><img src="img/electric light orchestra-out of the blue.jpg"></td>
-      <td class="c4 p"><img src="img/pleymo-rock.jpg"></td>
-      <td class="c5 p"><img src="img/m-les sens du son.jpg"></td>
-      <td class="c6 p"><img src="img/the bangles-walk like an egyptian.jpg"></td>
-      <td class="c7 p"><img src="img/manau-panique celtique.jpg"></td>
-      <td class="c8 p"><img src="img/bon entendeur-aller retour.jpg"></td>
-      <td class="c9 p"><img src="img/fiction plane-left side of the brain.jpg"></td>
-      <td class="c10 ko"><img src="img/dalida-revolution.jpg"></td>
-      <td class="c11 p"><img src="img/elbow_build_a_rocket_boys.jpg"></td>
-      <td class="c12 ko"><img src="img/iron maiden-number of the beast.jpg"></td>
-      <td class="c13"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/0empty.jpg"></td>
+      <td class="c2 ko"><img src="img/iron maiden-number of the beast.jpg"></td>
+      <td class="c3 ko"><img src="img/electric light orchestra-out of the blue.jpg"></td>
+      <td class="c4 ko"><img src="img/bon entendeur-aller retour.jpg"></td>
+      <td class="c5 ko"><img src="img/elbow_build_a_rocket_boys.jpg"></td>
+      <td class="c6 ko"><img src="img/fiction plane-left side of the brain.jpg"></td>
+      <td class="c7 ko"><img src="img/manau-panique celtique.jpg"></td>
+      <td class="c8"><img src="img/pleymo-rock.jpg"></td>
+      <td class="c9"><img src="img/the rolling stones-beggars banguet.jpg"></td>
+      <td class="c10"><img src="img/m-les sens du son.jpg"></td>
+      <td class="c11"><img src="img/the bangles-walk like an egyptian.jpg"></td>
+      <td class="c12"><img src="img/electric light orchestra-out of the blue.jpg"></td>
+      <td class="c13"><img src="img/neil young-on the beach.jpg"></td>
     </tr>
     <tr class="l11">
-      <td class="c1 p"><img src="img/keane-under the iron sea.jpg"></td>
+      <td class="c1"><img src="img/keane-under the iron sea.jpg"></td>
       <td class="c2"><img src="img/fort minor-the rising tied.jpg"></td>
       <td class="c3"><img src="img/incubus-light grenades.jpg"></td>
       <td class="c4"><img src="img/procol harum-procol harum.jpg"></td>
